src/run/ci_provider/gitlab_ci/snapshots/codspeed__run__ci_provider__gitlab_ci__provider__tests__fork_merge_request_provider_metadata-2.snap
---
source: src/run/ci_provider/gitlab_ci/provider.rs
expression: run_part
---
{
  "runId": "6957110437",
  "runPartId": "build-job",
  "jobName": "build-job",
  "metadata": {}
}
