src/run/ci_provider/gitlab_ci/snapshots/codspeed__run__ci_provider__gitlab_ci__provider__tests__merge_request_provider_metadata.snap
---
source: src/run/ci_provider/gitlab_ci/provider.rs
expression: provider_metadata
---
{
  "ref": "refs/pull/5/merge",
  "headRef": "feat/awesome-feature",
  "baseRef": "main",
  "owner": "owner",
  "repository": "repository",
  "event": "pull_request",
  "sender": {
    "id": "19605940",
    "login": "actor"
  },
  "ghData": null,
  "glData": {
    "runId": "6957110437",
    "job": "build-job"
  },
  "repositoryRootPath": "/builds/owner/repository"
}
