src/run/ci_provider/gitlab_ci/snapshots/codspeed__run__ci_provider__gitlab_ci__provider__tests__push_main_provider_metadata-2.snap
---
source: src/run/ci_provider/gitlab_ci/provider.rs
expression: run_part
---
{
  "runId": "1234567890",
  "runPartId": "job",
  "jobName": "job",
  "metadata": {}
}
