src/run/ci_provider/gitlab_ci/snapshots/codspeed__run__ci_provider__gitlab_ci__provider__tests__push_main_provider_metadata.snap
---
source: src/run/ci_provider/gitlab_ci/provider.rs
expression: provider_metadata
---
{
  "ref": "refs/heads/main",
  "headRef": null,
  "baseRef": "main",
  "owner": "owner",
  "repository": "repository",
  "event": "push",
  "sender": {
    "id": "1234567890",
    "login": "actor"
  },
  "ghData": null,
  "glData": {
    "runId": "1234567890",
    "job": "job"
  },
  "repositoryRootPath": "/builds/owner/repository"
}
